--- a/CRUDAngularApp/ClientApp/src/app/app.component.html
+++ b/CRUDAngularApp/ClientApp/src/app/app.component.html
@@ -1,6 +1,12 @@
-<body>
-  <app-nav-menu></app-nav-menu>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body style="margin-top:8px">
+  <!--<app-nav-menu></app-nav-menu>-->
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+  <br />
+  <!--<div class="d-flex align-items-center flex-column">
+    <marquee><b>@Copyright Aman Rai</b></marquee>
+  </div>-->
 </body>
